style.css
/* --------------- START IONSYS CSS ----------------*/

html{
	overflow-x:hidden;
}

*{
	margin:0;
}

body{
	font-family: 'Raleway', Georgia, Arial, Verdana;
	-webkit-font-smoothing: subpixel-antialiased;
	-moz-font-smoothing: subpixel-antialiased;
	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
	margin: 0;
}

span {
	display:inline;
}

@font-face {
    font-family: 'Raleway';
    src: url('raleway-webfont.eot');
    src: url('raleway-webfont.eot?#iefix') format('embedded-opentype'),
         url('raleway-webfont.woff') format('woff'),
         url('raleway-webfont.ttf') format('truetype'),
         url('raleway-webfont.svg#ralewaythin') format('svg');
    font-weight: bold;
    font-style: normal;

}


@font-face {
	font-family: "Flaticon";
	src: url("icons/flaticon.eot");
	src: url("icons/flaticon.eot#iefix") format("embedded-opentype"),
	url("icons/flaticon.woff") format("woff"),
	url("icons/flaticon.ttf") format("truetype"),
	url("icons/flaticon.svg") format("svg");
	font-weight: normal;
	font-style: normal;
}

/* CSS animations */

/*@-webkit-keyframes 'slideRight' {
	0%{
		-webkit-transform:translateX(0%);
	}
	100%{
		-webkit-transform:translateX(500px);
	}
}
*/
/*deviceCSS */

img{
	-webkit-transition: -webkit-transform 0.3s ease-in;
	-moz-transition: -moz-transform 0.3s ease-in;
	transition: transform 0.3s ease-in;

}

.container{
	text-align:center;
	width:100%;
	height:100%;
	/*padding-top:5em;*/
}

.device{
	position:relative;
	margin:auto;
	width:295px;
	height:500px;
	background-image: url('img-ionsys2-blank.png');
}

.device .led{
	position:absolute;
	height:75px;
	width:295px;
}

.ledGreen{
	background-image: url('led-green.png');
}

.ledRed{
	background-image: url('led-red.png');
}

.doseButton{
	position:absolute;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
	cursor:pointer;
	margin-left:107px;
	margin-top:76px;
	height:81px;
	width:80px;
	border-radius:40px;
	/*background-image: url('dosebutton-up.png');*/
	z-index:100;
}

.doseButtonPressed{
	background-image: url('dosebutton-down_s.png');
}


/* HEADER LOGO CSS */

.pageHeader{
	position:fixed;
	padding-top:0px;
	width:100%;
}

.frontHeader{
	position:fixed;
	z-index:100;
}

.backHeader{
	z-index:1;
	background-color:rgba(0,0,0,.5);
}

#ionsysLogo img{
	width:200px;
}

#ionsysLogo h3{
	display:none;
}

#headerLogo{
	width:161px;
	height:50px;
	background-image:url('img-ionsyslogo4.png');
	background-repeat:no-repeat;
	background-size:100%;
}

#headerLogoCircle{
	width:44px;
	height:50px;
	/*margin: 1em 0 0 1em;*/
	background-image:url('logo-ionsys-circle2.png');
	background-size:100%;
}

/* MAIN PAGE CSS */

.splash{
	position:relative;
	color:white;
	background: url(bg-hospitalroom2.jpg);
	background-size: auto 100%;
	background-color:black;
	z-index:10;
	text-align:center;
}

.splash .container{
	z-index:10;
	padding-top:0;
}


.container h2{
	font-size:3em;
}

.container h3{
	/*padding:.5em 0 .5em;*/
}

.container h4{
	padding:1em;
}
.container p{
	text-align:justify;
}

.container article{
	padding:0em 2em 1em;
}

#medcoLogo{
	position:relative;
	width:15em;
	margin:auto;
	/*bottom:2em;*/
	/*margin-top:25%;*/
}

#medcoLogo img{
	width:100%;
}

.caption{
	padding:.5em;
}



/*START SEVEN SEGMENT DISPLAY CSS */
.seven-segment {
	z-index:99;
  	position: absolute;
  	margin:auto;
  	width:500px;
  	left:-100px;
  	top:110px;
  	-webkit-transform:scale(0.12);
  	-moz-transform:scale(0.12);
  	-ms-transform:scale(0.12);
  	transform:scale(0.12);
}

.digit{
	position:relative;
	display:inline-block;
	width:180px;
	height:350px;
	margin: 1.5em;
}

.digit ones{

}

.digit .a {
  position: absolute;
  left: 10px;
  height: 0;
  width: 100px;
  border-top: 30px solid #000;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
}
.digit .b {
  position: absolute;
  left: 150px;
  top: 10px;
  height: 100px;
  width: 0;
  border-right: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}
.digit .c {
  position: absolute;
  left: 150px;
  top: 180px;
  height: 100px;
  width: 0;
  border-right: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}
.digit .d {
  position: absolute;
  top: 320px;
  left: 10px;
  height: 0;
  width: 100px;
  border-bottom: 30px solid #000;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
}
.digit .e {
  position: absolute;
  left: 0;
  top: 180px;
  height: 100px;
  width: 0;
  border-left: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}
.digit .f {
  position: absolute;
  left: 0;
  top: 10px;
  height: 100px;
  width: 0;
  border-left: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}

.digit .g:before{
	position:absolute;
	content: " ";
	height:14px;
	left:0px;
	top:-34px;
	width:120px;
	border-bottom: 20px solid #000;
	border-left: 20px solid transparent;
	border-right: 20px solid transparent;
}

.digit .g{
	position: relative;
	top: 175px;
  	left: 10px;
	height: 0px;
	margin:0;
	padding:0;
	width: 160px;
	background-color: #000;
}

.digit .g:after{
	position:absolute;
	content: " ";
	height:14px;
	width:120px;
	left:0px;
	bottom:-34px;
	border-top: 20px solid #000;
	border-left: 20px solid transparent;
	border-right: 020px solid transparent;
}

/* controls for the display (temp) */

.control {
	position:relative;
	text-align: center
}

.control button, .control input{
	border:none;
	outline: 0;
	border-radius:20px;
	padding:.5em .5em;
	margin: .2em;
	/*background:linear-gradient(to bottom, #4096ee 0%,#376dcc 100%);*/
	/*background-color:#4096EE;*/
	-webkit-tap-highlight-color: rgba(0,0,0,0);
	border:1px solid white;
	background-color:rgba(0,0,0,0);
	font: 1.2em 'Raleway';
	color:white;
	/*text-shadow: 2px 1px 1px rgba(0,0,0.5);*/
}

.control input[type=number]::-webkit-inner-spin-button, 
.control input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

.control button:hover{
	cursor:pointer;
	/*background:linear-gradient(to bottom, #4096ff 0%,#33f 100%);*/
	/*background-color:#33F;*/
	border:1px solid white;
	background-color:rgba(256,256,256,.2);
}

.control button:active{
	/*background:linear-gradient(to bottom, #000 100%,#376dcc 0%);*/
	/*background-color:#376dcc;*/
	border:1px solid white;
	background-color:rgba(256,256,256,.5);
}

.digitOff, .digitOff:before, .digitOff:after {
	border: none !important;
}

#deviceStatus{
	/*padding:.5em;*/
}

/* utility classes */

.hidden{
	display:none !important;
}

.notransition {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  -ms-transition: none !important;
  transition: none !important;
}


/* classes for description text*/

.context{
	position:relative;
	padding: 1em 0 3em;
	text-align: center;
}

/*.contextOverflow{
	overflow:hidden;
	display:none;
	padding-bottom: 1em;
}
*/
.contextContent{
	/*display:none;*/
	position:relative;
	overflow:hidden;
	height:0;
	-webkit-transition: height 0.4s ease-out;
	-moz-transition: height 0.4s ease-out;
	-o-transition: height 0.4s ease-out;
	transition: height 0.4s ease-out;
}

.contextContent.slideDown{
	height:350px;
}


.contextArrowContainer{
	position:relative;
	bottom:0;
	margin:auto;
	width:3em;
	/*display:inline !important;*/*/
}

.contextArrow{
	display:block;
}

.contextArrowClosed{
	transform:rotate(270deg);
	-webkit-transform:rotate(270deg);
	-moz-transform:rotate(270deg);
}

.contextArrowOpen{
	transform:rotate(90deg);
	-webkit-transform:rotate(90deg);
	-moz-transform:rotate(90deg);
}

.contextArrow:hover{
	cursor:pointer;
}

[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
	font-family: Flaticon;
    font-size: 3em;
	font-style: normal;
	margin-left:0;
}

.flaticon-arrow395:before {
	content: "\e010";
}


@media only screen and (min-width: 900px){
	.splashLimiter{
		max-width:900px;
		margin:auto;
	}

	#headerLogo{
		width:242px;
		height:75px;
	}

	#headerLogoCircle{
		width:66px;
		height:75px;
	}

	#ionsysLogo{
		padding-bottom:1em;
	}

	#ionsysLogo img{
		width:auto;
	}

	#ionsysLogo h3{
		display:block;
	}

	.container{
		/*padding:7em 0 0;*/
		position:relative;
		display:inline-block;
		margin:auto;
		width:calc(49% - 4em);
		vertical-align:middle !important;
	}

	.container h2{
		font-size:2.5em;
	}

	.container h3, .splash h3{
		font-size:1.5em;
	}

	.container h4{
		font-size:1.5em;
		padding: 1em;
	}

	.container header{
		display:inline-block;
		padding:0;
		width:100%;
	}

	.context{
		min-height:400px;
		padding: 1em 0 0;
	}

	.contextOverflow{
		overflow:hidden;
		padding-bottom: 1em;
	}

	.contextArrowClosed{
		transform:rotate(180deg);
		-webkit-transform:rotate(180deg);
		-moz-transform:rotate(180deg);
	}

	.contextArrowOpen{
		transform:rotate(0deg);
		-webkit-transform:rotate(0deg);
		-moz-transform:rotate(0deg);
	}

	.contextContent.slideRight{
		left:0px !important;
	}

	.contextArrow.slideRight{
	}

	.contextContent{
		position:relative;
		height:auto;
		left:0;
		top:1em;
		display:inline-block;
		width:100%;
		-webkit-transition: left 0.4s cubic-bezier(.45,.59,.96,.84);
		-moz-transition: left 0.4s ease-out;
		-o-transition: left 0.4s ease-out;
		transition: left 0.4s ease-out;
	}

	.contextArrowContainer{
		position:absolute;
		/*float:left;*/
		display:inline-block;
		top:0;
		left:0;
		margin:auto;
		width:3em;
	}

	.contextArrow{
		left:0;
		display:block;
		position:relative;
		-webkit-transition: left 0.4s cubic-bezier(.45,.59,.96,.84);
		-moz-transition: left 0.4s ease-out;
		-o-transition: left 0.4s ease-out;
		transition: left 0.4s ease-out;
	}

}

